--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   backend:
     build: 
-      context: .
+      context: ./backend
       dockerfile: Dockerfile
     container_name: rust-backend
     ports:
