--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -17,3 +17,6 @@ tracing-subscriber = "0.3"
 clap = { version = "4.0", features = ["derive"] }
 chrono = { version = "0.4", features = ["serde"] }
 fastembed = "5.0.0"
+
+[build-dependencies]
+cc = "1.0"
